<resources>
    <string name="app_name">Circle Breaker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="settings_name">Settings</string>
    <string name="logout">Log-out</string>
    <string name="levelsText">Levels</string>
    <string name="levelFieldText">Level: 1</string>
    <string name="playText">Play</string>
    <string name="scoreText">Scoreboard</string>
    <string name="scroreBoardTitleString">Score Board</string>
    <string name="userText">User Text</string>
    <string name="placeText">Place</string>
    <string name="nameText">Name</string>
    <string name="levelText">Level</string>
    <string name="chooseLevel">Choose a Level</string>
    <string name="facebook_app_id">263926417559203</string>

</resources>
